Fix z-index of suggestions

--- a/src/css/autosuggest.css
+++ b/src/css/autosuggest.css
@@ -4,6 +4,7 @@
 
 .react-autosuggest__suggestions-container {
 	position: absolute;
+	z-index: 2;
 	list-style-type: none;
 	width: 100%;
 	margin-top: 2px;
